Changed title bar message changed image container css in Dailyupdates page

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kshipani - Missile Tracker</title>
+    <title>Kshipani - Mission Possible</title>
     <style >
     .PresetDateRangePicker_panel {
 	padding: 0 22px 11px;
